2009-01-06  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/vcs/svn.py:
	Whoops, that just resulted in attaching watches everywhere.

2009-01-05  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	There were a whole lot of bugs with the status checking code, so I 
	rewrote all the status checking methods. This seems to work better, however
	now I don't understand how the cache can be used to its full extent in
	this situation.

2009-01-05  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Fixed "Already under version control" for add. Offcourse we need to integrate
	Adam's GUI stuff, but this is for my testing ;-)

2009-01-05  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Recursive top down might be a better idea than bottom up.

2009-01-05  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/service.py:
	Forgot to update exit call to match DBus style.
	
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Added recursive refresh status, there are some bugs though.

2009-01-04  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/dbus/service.py:
	* nautilussvn/lib/dbus/status_monitor.py:
	* nautilussvn/lib/dbus/svn_client.py:
	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	* nautilussvn/lib/vcs/svn.py:
	Implemented a temporary hack to make the context menu use the status cache. 
	We have to refactor the SVN class and also the DBus stuff in the near future.

2009-01-03  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	I spoke too soon, really trust me I tested it this time.

2009-01-03  Bruce van der Kooij  <brucevdkooij@gmail.com>

	* nautilussvn/lib/extensions/nautilus/NautilusSvn.py:
	Ignore that.... now it should though!
